# fashion-mnist

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  infer.py  pyproject.toml  train.py
.dvc/: config
conf/: config.yaml
export_dir/: model.pth  predictions.csv
outputs/2023-12-03/20-17-21/.hydra/: hydra.yaml
outputs/2023-12-03/20-18-11/.hydra/: hydra.yaml
outputs/2023-12-03/20-22-42/.hydra/: hydra.yaml
outputs/2023-12-03/20-24-40/.hydra/: hydra.yaml
outputs/2023-12-03/20-25-58/.hydra/: hydra.yaml
outputs/2023-12-03/20-29-04/.hydra/: hydra.yaml
outputs/2023-12-03/20-31-01/.hydra/: hydra.yaml
outputs/2023-12-03/20-32-58/.hydra/: hydra.yaml
outputs/2023-12-03/20-34-50/.hydra/: hydra.yaml
outputs/2023-12-03/20-35-36/.hydra/: hydra.yaml
outputs/2023-12-03/20-39-47/.hydra/: hydra.yaml
outputs/2023-12-03/20-45-35/.hydra/: hydra.yaml
outputs/2023-12-03/20-46-42/.hydra/: hydra.yaml
outputs/2023-12-03/21-37-48/.hydra/: hydra.yaml
outputs/2023-12-03/21-39-52/.hydra/: hydra.yaml
outputs/2023-12-03/21-40-40/.hydra/: hydra.yaml
outputs/2023-12-03/21-40-48/.hydra/: hydra.yaml
outputs/2023-12-03/21-41-30/.hydra/: hydra.yaml
outputs/2023-12-03/21-44-09/.hydra/: hydra.yaml
outputs/2023-12-03/21-44-21/.hydra/: hydra.yaml
outputs/2023-12-03/21-45-13/.hydra/: hydra.yaml
outputs/2023-12-03/21-50-12/.hydra/: hydra.yaml
outputs/2023-12-03/21-51-09/.hydra/: hydra.yaml
outputs/2023-12-03/21-55-44/.hydra/: hydra.yaml
outputs/2023-12-03/21-56-18/.hydra/: hydra.yaml
src/fashionmnist/: model.py  train_utils.py
(+9 files in other folders)
